k8s/jenkins-template.yaml
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: buildercicd
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: nfs-direct-pv
    namespace: buildercicd
  spec:
    storageClassName: nfs-direct
    capacity:
      storage: 10Gi
    accessModes:
      - ReadWriteMany
    nfs:
      path: /datos/builder
      server: 192.168.1.110
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: nfs-jenkins
  spec:
    storageClassName: nfs-direct
    accessModes:
      - ReadWriteMany
    resources:
      requests:
        storage: 10Gi		  
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: jenkins
      env: cicd
    name: builder
    namespace: buildercicd
  spec:
    progressDeadlineSeconds: 600
    replicas: 0
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: jenkins
        env: cicd
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: jenkins
          env: cicd
      spec:
      volumes:
        - name: jenkins-storage
          persistentVolumeClaim:
            claimName: nfs-jenkins
        containers:
        - env:
          - name: JAVA_OPTS
            value: -Duser.timezone=America/Bogota -Djenkins.install.runSetupWizard=false  -Djava.awt.headless=true
          image: charlie335/jenkins:1.0-setup
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 12
            httpGet:
              path: /login
              port: http
              scheme: HTTP
            initialDelaySeconds: 80
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: jenkins
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 50000
            name: jnlp
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /login
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "2"
              memory: 1.5Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    name: builder-http
    namespace: buildercicd
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: jenkins
      env: cicd
    sessionAffinity: None
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    labels:
      app: jenkins
      env: cicd
    name: builder
    namespace: buildercicd
  spec:
    rules:
    - host: builder.localhost.com
      http:
        paths:
        - backend:
            serviceName: builder-http
            servicePort: 8080
          pathType: ImplementationSpecific
